Checkpoint 27 Assignment completed

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -25,3 +25,13 @@ section{
     margin: 5px 5px 5px 5px;
     padding: 5px 5px 5px 5px;
 }
+
+.social-btn{
+    color: blue;
+    height: 20px;
+    width: 100px;
+    padding: 5 5 5 5;
+    text-align: center;
+    border-width: 1px;
+    
+}
