Checkpoint-28-Rails-Models

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -11,7 +11,7 @@ h1 {
     color: blue;
 }
 
-posts{
+.posts {
     border: solid;
     margin: 5px;
     padding: 5px;
@@ -33,5 +33,4 @@ section{
     padding: 5 5 5 5;
     text-align: center;
     border-width: 1px;
-    
 }
