--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-    <div class = "container"
-      <ul class = "nav nav-tabs"
+    <div class = "container">
+      <ul class = "nav nav-tabs">
         <li><%= link_to "Home", welcome_index_path %></li>
         <li><%= link_to "About", welcome_about_path %></li>
       </ul>
+      
       <%= yield %>
+    
     </div>
 </body>
 </html>
